@@ -100,8 +100,9 @@ class ActivityStaffGateway extends QueryableGateway
     public function selectStaffByCategory($gibbonActivityCategoryID)
     {
         $data = ['gibbonActivityCategoryID' => $gibbonActivityCategoryID];
-        $sql = "SELECT gibbonPerson.gibbonPersonID as groupBy,
+        $sql = "SELECT gibbonActivityStaff.gibbonActivityStaffID as groupBy,
                     gibbonActivity.gibbonActivityID,
+                    gibbonActivityStaff.gibbonActivityStaffID as enrolmentID,
                     gibbonActivityStaff.gibbonActivityStaffID,
                     gibbonActivityStaff.role,
                     gibbonPerson.gibbonPersonID,
