@@ -67,6 +67,7 @@ v30.0.00
         System: fixed login options not working when using SSO button
         System: fixed login redirect after public registration
         System: fixed redirect logic in Payment class causing unnecessary error logs
+        Activities: fixed Manage Enrolment when participants are part of more than one activity
         Data Updater: fixed attachments being cleared when new data updates are submitted
         Messenger: fixed missing From address on emails when using the Add Recipient action in Send Report
         Planner: fixed Teacher Notes in smart blocks not visible when using the Show Confidential Data toggle
